<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.Dojo"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:background="?android:selectableItemBackground"
    android:padding="8dp"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="4dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_full_name"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="16dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_full_name"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/default_tv_full_name"
        app:layout_constraintBottom_toTopOf="@+id/tv_username"
        tools:layout_editor_absoluteX="92dp" />


    <TextView
        android:id="@+id/tv_username"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/default_tv_username"
        app:layout_constraintBottom_toTopOf="@+id/tv_description"
        tools:layout_editor_absoluteX="92dp" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="310dp"
        android:layout_height="82dp"
        android:layout_marginBottom="6dp"
        android:text="@string/default_tv_description"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="72dp" />


</androidx.constraintlayout.widget.ConstraintLayout>