<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:theme="@style/Theme.Dojo"
    tools:context=".view.form.FormActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_search_result"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:innerRadius="0dp"
            android:shape="ring"
            android:thicknessRatio="1.9"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.079">

            <ImageView
                android:id="@+id/iv_form_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_default_avatar" />
        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/et_avatar_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/default_hint_avatar_url"
            android:inputType="textUri"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_search_result"
            app:layout_constraintVertical_bias="0.132" />

        <EditText
            android:id="@+id/et_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/default_hint_fullname"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/et_avatar_url"
            tools:layout_editor_absoluteX="8dp" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/default_hint_username"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/et_fullname"
            tools:layout_editor_absoluteX="8dp" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/default_hint_description"
            android:inputType="textMultiLine"
            app:layout_constraintTop_toBottomOf="@+id/et_username"
            tools:layout_editor_absoluteX="16dp" />

        <Button
            android:id="@+id/bt_form_update"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="109dp"
            android:backgroundTint="@color/design_default_color_primary"
            android:text="@string/default_btn_update"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.923"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_description"
            app:layout_constraintVertical_bias="0.491" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>